--- a/src/pug/sections/_our-team.pug
+++ b/src/pug/sections/_our-team.pug
@@ -3,7 +3,7 @@ section.team
 	.container-special
 		.header-block
 			h2.h2 Для вас работают опытные профессионалы
-			a(href="#!").btn-primary 
+			a(href="#!").btn-primary.hide-sm 
 				span Все врачи
 				svg.svg-rarr
 					use(href='../img/sprite.svg#svg-rarr')
