--- a/src/pug/sections/_our-team.pug
+++ b/src/pug/sections/_our-team.pug
@@ -44,54 +44,89 @@ section.team
 				span.btn-play
 						
 		//карточки темы
-		.teams-cards.swiper
-			.swiper-wrapper
-				.swiper-slide.persone-card
-					//card
-					.persone-card__img
-						img.cover-img(src="./img/team/1.webp", srcset="./img/team/1@2x.webp"  width="281" height='187' alt="img")
-					.persone-card-block
-						.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
-						.persone-card__info
-							p Основатель клиники
-							p Стоматолог - хирург, имплантолог, пародонтолог
-				.swiper-slide.persone-card
-					//card
-					.persone-card__img
-						img.cover-img(src="./img/team/2.webp", srcset="./img/team/2@2x.webp"  width="281" height='187' alt="img")
-					.persone-card-block
-						.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
-						.persone-card__info
-							p Основатель клиники
-							p Стоматолог - хирург, имплантолог, пародонтолог 
-				
-				.swiper-slide.persone-card
-					//card
-					.persone-card__img
-						img.cover-img(src="./img/team/3.webp", srcset="./img/team/3@2x.webp"  width="281" height='187' alt="img")
-					.persone-card-block
-						.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
-						.persone-card__info
-							p Основатель клиники
-							p Стоматолог - хирург, имплантолог, пародонтолог 
-							
-				.swiper-slide.persone-card
-					//card
-					.persone-card__img
-						img.cover-img(src="./img/team/4.webp", srcset="./img/team/4@2x.webp"  width="281" height='187' alt="img")
-					.persone-card-block
-						.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
-						.persone-card__info
-							p Основатель клиники
-							p Стоматолог - хирург, имплантолог, пародонтолог 
-				
-				.swiper-slide.persone-card
-					//card
-					.persone-card__img
-						img.cover-img(src="./img/team/5.webp", srcset="./img/team/5@2x.webp"  width="281" height='187' alt="img")
-					.persone-card-block
-						.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
-						.persone-card__info
-							p Основатель клиники
-							p Стоматолог - хирург, имплантолог, пародонтолог 
+		.teams-cards-slider
+			.teams-cards.swiper
+				.swiper-wrapper
+					.swiper-slide.persone-card
+						//card
+						.persone-card__img
+							img.cover-img(src="./img/team/1.webp", srcset="./img/team/1@2x.webp"  width="281" height='187' alt="img")
+						.persone-card-block
+							.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
+							.persone-card__info
+								p Основатель клиники
+								p Стоматолог - хирург, имплантолог, пародонтолог
+					.swiper-slide.persone-card
+						//card
+						.persone-card__img
+							img.cover-img(src="./img/team/2.webp", srcset="./img/team/2@2x.webp"  width="281" height='187' alt="img")
+						.persone-card-block
+							.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
+							.persone-card__info
+								p Основатель клиники
+								p Стоматолог - хирург, имплантолог, пародонтолог 
 					
+					.swiper-slide.persone-card
+						//card
+						.persone-card__img
+							img.cover-img(src="./img/team/3.webp", srcset="./img/team/3@2x.webp"  width="281" height='187' alt="img")
+						.persone-card-block
+							.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
+							.persone-card__info
+								p Основатель клиники
+								p Стоматолог - хирург, имплантолог, пародонтолог 
+								
+					.swiper-slide.persone-card
+						//card
+						.persone-card__img
+							img.cover-img(src="./img/team/4.webp", srcset="./img/team/4@2x.webp"  width="281" height='187' alt="img")
+						.persone-card-block
+							.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
+							.persone-card__info
+								p Основатель клиники
+								p Стоматолог - хирург, имплантолог, пародонтолог 
+					
+					.swiper-slide.persone-card
+						//card
+						.persone-card__img
+							img.cover-img(src="./img/team/5.webp", srcset="./img/team/5@2x.webp"  width="281" height='187' alt="img")
+						.persone-card-block
+							.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
+							.persone-card__info
+								p Основатель клиники
+								p Стоматолог - хирург, имплантолог, пародонтолог 
+
+					.swiper-slide.persone-card
+						//card
+						.persone-card__img
+							img.cover-img(src="./img/team/3.webp", srcset="./img/team/3@2x.webp"  width="281" height='187' alt="img")
+						.persone-card-block
+							.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
+							.persone-card__info
+								p Основатель клиники
+								p Стоматолог - хирург, имплантолог, пародонтолог 
+								
+					.swiper-slide.persone-card
+						//card
+						.persone-card__img
+							img.cover-img(src="./img/team/4.webp", srcset="./img/team/4@2x.webp"  width="281" height='187' alt="img")
+						.persone-card-block
+							.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
+							.persone-card__info
+								p Основатель клиники
+								p Стоматолог - хирург, имплантолог, пародонтолог 
+					
+					.swiper-slide.persone-card
+						//card
+						.persone-card__img
+							img.cover-img(src="./img/team/5.webp", srcset="./img/team/5@2x.webp"  width="281" height='187' alt="img")
+						.persone-card-block
+							.persone-card__title  РОМАН ВРУЙРОВИЧ ВАРДАНЯН
+							.persone-card__info
+								p Основатель клиники
+								p Стоматолог - хирург, имплантолог, пародонтолог 			
+			
+			//nav right arrow(на макете была только одна стрелка вправо)
+			button.teams-cards-next
+				svg.svg-rarr
+					use(href='./img/sprite.svg#svg-rarr')
