--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -6,6 +6,7 @@ block content
 		include ../sections/_promo.pug
 		include ../sections/_service-poppulare.pug
 		include ../sections/_our-team.pug
+		include ../sections/_statistics
 	
 	
 	//include ../sections/_footer
