--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -13,6 +13,7 @@
 @use "sections/_promo-main.scss";
 @use "sections/_service-poppulare.scss";
 @use "sections/_our-team.scss";
+@use "blocks/_statistic.scss";
 
 
 // @use "sections/_footer";
