--- a/src/pug/ui/components.pug
+++ b/src/pug/ui/components.pug
@@ -38,3 +38,55 @@ html(lang="ru")
 					.address-block__info
 						p ул. Стахановцев, д. 6
 						p пн-вс: 9:00 — 21:00
+
+				br
+				.statistic-item
+					.h1 15000
+					p Счастливых<br>пациентов
+				br
+				.statistic-group.flex
+					.statistic-item
+						.h1 2000
+						p Положительных<br>отзывов
+					
+					
+					.statistic-item
+						.h1 10
+						p Опытных<br>врачей
+
+				.statistic-group.flex-col
+					.statistic-item
+						.h1 2012
+						p Работает<br>наша клиника 
+					
+					
+					.statistic-item
+						.h1 13
+						p Лет нашему<br>делу
+				
+				.statistic-block
+					
+					.statistic-group
+						.statistic-item
+							.h1 15000
+							p Счастливых<br>пациентов
+
+					.statistic-group.flex
+						.statistic-item
+							.h1 2000
+							p Положительных<br>отзывов
+						
+						
+						.statistic-item
+							.h1 10
+							p Опытных<br>врачей
+					
+					.statistic-group.flex-col
+						.statistic-item
+							.h1 2012
+							p Работает<br>наша клиника
+						.statistic-item
+							.h1 13
+							p Лет нашему<br>делу
+				pre.
+					include ../blocks/_statistic-block.pug
