--- a/src/pug/blocks/_statistic-block.pug
+++ b/src/pug/blocks/_statistic-block.pug
@@ -1,6 +1,6 @@
 .statistic-block
-	.statistic-group
-		.statistic-item.statistic-item--first
+	.statistic-group.statistic-group--first
+		.statistic-item
 			.h1 15000
 			p Счастливых<br>пациентов
 
