--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,6 +14,7 @@
 @use "sections/_service-poppulare.scss";
 @use "sections/_our-team.scss";
 @use "blocks/_statistic.scss";
+@use "sections/_about.scss";
 
 
 // @use "sections/_footer";
