--- a/src/scss/sections/_service-poppulare.scss
+++ b/src/scss/sections/_service-poppulare.scss
@@ -85,8 +85,10 @@
 }
 .poppular-service{
 	@media (max-width: 767px) {
+		padding-top: 18px;
 		.container-special{
 			padding-bottom: 134px;
+			
 		}
 		
 		.abs-btn{
