--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -7,6 +7,7 @@ block content
 		include ../sections/_service-poppulare.pug
 		include ../sections/_our-team.pug
 		include ../sections/_about
+		include ../sections/_steps
 	
 	
 	//include ../sections/_footer
