--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,6 +15,7 @@
 @use "sections/_our-team.scss";
 @use "blocks/_statistic.scss";
 @use "sections/_about.scss";
+@use "sections/_steps.scss";
 
 
 // @use "sections/_footer";
