--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -8,6 +8,7 @@ block content
 		include ../sections/_our-team.pug
 		include ../sections/_about
 		include ../sections/_steps
+		include ../sections/_feedback
 	
 	
 	//include ../sections/_footer
