--- a/src/pug/sections/_header.pug
+++ b/src/pug/sections/_header.pug
@@ -44,11 +44,11 @@ header.header
 						
 						.social-block
 							a(href="#!").social-link
-									img(src="./img/social/inst.svg", width="24" height="24" alt="img")
+								img(src="./img/social/inst2.svg", width="24" height="24" alt="img")
 							a(href="#!").social-link
-								span IN
+								img(src="./img/social/wa.svg", width="24" height="24" alt="img")
 							a(href="#!").social-link
-								span BE
+								img(src="./img/social/youtube.svg", width="24" height="24" alt="img")
 			
 			
 			//MOBILE MENU BURGER
