--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -16,6 +16,8 @@
 @use "blocks/_statistic.scss";
 @use "sections/_about.scss";
 @use "sections/_steps.scss";
+@use "sections/_feedback.scss";
+
 
 
 // @use "sections/_footer";
