--- a/src/scss/base/_form.scss
+++ b/src/scss/base/_form.scss
@@ -3,7 +3,7 @@
 	position: relative;
 	input, textarea{
 		display: block;
-		height: 50px;
+		height: 52px;
 		width: 100%;
 		border: 1px solid #c2c2c2;
 		border-radius: 24px;
@@ -15,6 +15,7 @@
 		padding-right: 16px;
 		padding-top: 11px;
 		line-height: 1;
+		@media(min-width:768px) and (max-width: 1919px){height: 32px;}
 	}
 	input:focus{
 		border: 1px solid #C71647;
@@ -31,10 +32,9 @@
 		top: 15px;
 		transition: .3s;
 		pointer-events: none;
+		@media(min-width:768px) and (max-width: 1919px){font-size: remy(14); top:remy(15)}
 	}
-	.fake-place{
-
-	}
+	
 	textarea{
 		padding: 16px;
 	}
@@ -43,6 +43,7 @@
 	.fake-placeholder{
 		top:4px;
 		font-size: 12px;
+		@media(min-width:768px) and (max-width: 1919px){font-size: remy(12); top:remy(4)}
 	}
 }
 
@@ -92,4 +93,30 @@
 	.fake-placeholder{color: #EE2121;}
 	input +p{font-size: 14px;
 		color: #EE2121; margin-top: 5px;padding-left: 16px;}
+}
+.form-btn{
+	column-gap:25px;
+	@media (max-width: 767px) {
+	flex-direction: column;
+	row-gap:22px;
+	.agree-txt{text-align: center;}
+	[type="submit"]{width: 100%;}
+	}
+}
+
+.agree-txt{
+	font-weight: 400;
+	font-size: 12px;
+	line-height: 117%;
+	color: #2e3033;
+	@media (max-width: 1919px) {
+		font-size: remy(12);
+	}
+	@media (max-width: 767px) {
+		font-size: 12px;
+	}
+}
+form.flex-col{
+	row-gap:16px;
+	&>*{width: 100%;}
 }
