--- a/src/pug/pages/main.pug
+++ b/src/pug/pages/main.pug
@@ -9,6 +9,7 @@ block content
 		include ../sections/_about
 		include ../sections/_steps
 		include ../sections/_feedback
+		include ../sections/_review-section
 	
 	
 	//include ../sections/_footer
