--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -17,6 +17,8 @@
 @use "sections/_about.scss";
 @use "sections/_steps.scss";
 @use "sections/_feedback.scss";
+@use "sections/_review-section.scss";
+
 
 
 
