--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -14,7 +14,9 @@
 @use "sections/_service-poppulare.scss";
 @use "sections/_our-team.scss";
 @use "blocks/_statistic.scss";
+@use "sections/_cta.scss";
 @use "sections/_about.scss";
+
 @use "sections/_steps.scss";
 @use "sections/_feedback.scss";
 @use "sections/_review-section.scss";
