--- a/src/scss/base/_icons.scss
+++ b/src/scss/base/_icons.scss
@@ -49,7 +49,12 @@
 	display: inline-block;
 	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='39' height='33' viewBox='0 0 39 33' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M14.88 32.4H0L2.76 0H12.12L14.88 32.4ZM26.4 0H35.76L38.52 32.4H23.64L26.4 0Z' fill='%23B9B1A6' /%3e%3c/svg%3e");
 }
-
+.quote-dark{
+	width: 40px;
+	height: 33px;
+	display: inline-block;
+	background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg width='40' height='33' viewBox='0 0 40 33' fill='none' xmlns='http://www.w3.org/2000/svg'%3e%3cpath d='M24.14 0H39.02L36.26 32.4H26.9L24.14 0ZM15.38 0L12.62 32.4H3.26L0.5 0H15.38Z' fill='%232E3033' /%3e%3c/svg%3e");
+}
 
 .btn-play{
 	width: 44px;
