--- a/src/pug/sections/_cta.pug
+++ b/src/pug/sections/_cta.pug
@@ -1,21 +1,25 @@
 //CTA
 section.cta
 	.cta-bg-img
-		img(src='./img/rotate/line.svg'  loading='lazy' alt='img')
+		img(src='./img/rotate/line2.svg'  loading='lazy' alt='img')
 	.container
 		.cta-content
-			.cta-top-txt
-				.cta-text-big  " Мы#[br] создаем #[span.gogol-text улыбки]
-			
-			.cta-image-block
+			.cta-top.cta-big-txt
+				p #[span.quote-dark] Мы#[br] создаем #[span.gogol-text улыбки]
 				.rotate-image.rotate-image1
-					img(src='./img/rotate/2.webp' width='169' height='202' loading='lazy' alt='img')
-				.rotate-image.rotate-image2
-					img(src='./img/rotate/1.webp' width='169' height='202' loading='lazy' alt='img')
-				.rotate-image.rotate-image3
-					img(src='./img/rotate/3.webp' width='169' height='202' loading='lazy' alt='img')
+					img(src='./img/rotate/2.webp' width='234' height='261' loading='lazy' alt='img')
+					span.img-caption виниры<br>что то там
 			
-			.cta-bottom-txt
-				.cta-text-big.flex которые меняют
-				.cta-text-big #[span.gogol-text жизни] людей "
+			.cta-center.cta-big-txt
+				.cta-text-big
+					p которые меняют
+					.rotate-image.rotate-image3
+						img(src='./img/rotate/3.webp' width='234' height='261' loading='lazy' alt='img')
+						span.img-caption виниры<br>что то там
+				
+			.cta-bottom.cta-big-txt
+				p #[span.gogol-text жизни] людей #[span.quote-dark]
+				.rotate-image.rotate-image2
+					img(src='./img/rotate/1.webp' width='234' height='261' loading='lazy' alt='img')
+					span.img-caption виниры<br>что то там
 					
