--- a/src/scss/sections/_cta.scss
+++ b/src/scss/sections/_cta.scss
@@ -1,15 +1,51 @@
-.cta{
-	
-	&-text-big{
+@use "../base/var" as *;
+.cta{position: relative;
+
+	.cta-bg-img{
+		position: absolute;
+		top: 45%;
+		left:50%;
+		transform: translate(-50%, -50%);
+		width: 1920px;
+	}
+	.container{
+		border-bottom: 1px solid #b9b1a6;
+		height: 1022px;
+		padding-top: 160px;
+		padding-left: 90px;
+	}
+	.cta-top{
+		position: relative;
+		margin-bottom: 200px;
+		.quote-dark{position: absolute;
+			left: -55px;
+			top:-17px;
+		}
+		@media (max-width: 1919px) {
+			margin-bottom: remy(200);
+			.quote-dark{
+				left: remy(-55);
+				top:remy(-17);
+			}
+		}
+	}
+	.cta-big-txt{
 		font-family: var(--second-family);
 		font-style: italic;
 		font-weight: 300;
 		font-size: 75px;
-		line-height: 120%;
+		line-height: .5;
 		letter-spacing: -0.03em;
 		color: #2e3033;
 		position: relative;
-		
+		z-index:2;
+		font-weight: 700;
+		line-height: 0.7;
+		p{
+			line-height: .5;
+			position: relative;
+			z-index:2;
+		}
 		.gogol-text{
 			font-size: 130px;
 			line-height: 120%;
@@ -31,32 +67,69 @@
 			}
 		}
 	}
-	&-bg-img{
-		position: absolute;
-		left: 0;
-		right: 0;
-		top: 50%;
-		transform: translateY(-50%);
-		img{
-			width: 100%;
-		}
-	}
-	.cta-bottom-txt{
-		margin-top: 206px;
-	}
-	.cta-text-big.flex{
-		justify-content: flex-end;
-	}
-}
-.cta-image-block{
-	width: 735px;
-	height: 530px;
-	position: relative;
 	
+	@media (max-width: 1919px) {
+		.container{
+			height: remy(1022);
+	   		 padding-top: remy(180);
+		}
+		
+	}
+
 }
 .cta{
-	// background-image: url('../img/rotate/line.svg');
-	// background-position: center;
-	// background-size: cover;
-	// background-repeat: no-repeat;
+	.rotate-image{
+		width: 252px;
+		height:303px;
+		z-index:1;
+		@media (max-width: 1919px) {
+			width: remy(252);
+			height:remy(303);
+
+		}
+	}
+	
+	.cta-center{
+		margin-top: 205px;
+		padding-right: 60px;
+		margin-bottom: 60px;
+		text-align: right;
+		p{position: relative;z-index:2;	}
+		.rotate-image3{
+			position: absolute;
+			transform:rotate(-13.1deg);
+			top: -288px;
+			right: 324px;
+			z-index:1
+		}
+		@media (max-width: 1919px) {
+			margin-top: remy(205);
+			padding-right: remy(60);
+			.rotate-image3{
+				
+				top: remy(-288);
+				right: remy(324);
+			}
+		}
+	}
+	.cta-bottom{
+		position: relative;z-index:3;
+		p{position: relative;z-index:2;	}
+	}
+	.rotate-image1{
+		transform:rotate(22.63deg);
+		top: -145px;
+    	left: 465px;
+		position: absolute;
+		z-index: 1;
+	}
+	.rotate-image2{
+		transform:rotate(-25.08deg);
+		top: -250px;
+		left: 222px;
+		position: absolute;
+		z-index:1;
+	}
+	
+	
 }
