--- a/src/pug/sections/_cta.pug
+++ b/src/pug/sections/_cta.pug
@@ -4,6 +4,9 @@ section.cta
 		img(src='./img/rotate/line2.svg'  loading='lazy' alt='img')
 	.container
 		.cta-content
+			.siple-txt-top
+				p Заботясь о здоровье зубов наших пациентов, мы не просто лечим — мы возвращаем уверенность и улыбки в их жизни.
+			
 			.cta-top.cta-big-txt
 				p #[span.quote-dark] Мы#[br] создаем #[span.gogol-text улыбки]
 				.rotate-image.rotate-image1
@@ -22,4 +25,6 @@ section.cta
 				.rotate-image.rotate-image2
 					img(src='./img/rotate/1.webp' width='234' height='261' loading='lazy' alt='img')
 					span.img-caption виниры<br>что то там
-					
+
+			.siple-txt-bottom
+				p  Каждый день — это новая возможность для нас сделать мир вокруг лучше!
