--- a/src/scss/base/_typography.scss
+++ b/src/scss/base/_typography.scss
@@ -94,7 +94,8 @@
 	font-weight: 400;
 	font-size: 70px;
 	line-height: 89%;
-	
+	margin-left: 5px;
+	margin-right: 5px;
 	color: #c7491f;
 	@media (max-width: 1919px) {
 		font-size: remy(70);
