--- a/src/scss/sections/_cta.scss
+++ b/src/scss/sections/_cta.scss
@@ -10,6 +10,9 @@
 		@media (max-width: 1919px) {
 			width: 100vw;
 		}
+		@media (max-width: 767px) {
+			top: 54%;
+		}
 	}
 	.container{
 		border-bottom: 1px solid #b9b1a6;
@@ -22,6 +25,17 @@
 			height: remy(1022);
 			padding-top: remy(160);
 			padding-left: remy(90);
+		}
+		@media (max-width: 767px) {
+		  height: 480px;
+		  padding-top: 70px;
+		  padding-bottom: 20px;
+		  padding-left: 20px;
+		 .cta-content{
+			max-width: 400px;
+			margin: 0 auto;
+		 }
+
 		}
 	}
 	.cta-top{
@@ -36,6 +50,15 @@
 			.quote-dark{
 				left: remy(-55);
 				top:remy(-17);
+			}
+		}
+		@media (max-width: 767px) {
+	    	z-index: 4;
+			padding-left: 40px;
+			p{padding-left: 10px;}
+			.gogol-text{
+				position: relative;
+				left:115px;
 			}
 		}
 	}
@@ -91,6 +114,12 @@
 			height:remy(303);
 
 		}
+		@media (max-width: 767px) {
+			padding: 5px;
+			padding-bottom: 15px;
+			width: 117px;
+			height: 140px;
+		   }
 	}
 	
 	.cta-center{
@@ -114,12 +143,30 @@
 				
 				top: remy(-288);
 				right: remy(324);
+				@media (max-width: 767px) {
+					top:-225px;
+					right:40px;
+				}
+				@media (max-width: 401px) {
+					right:0;
+				}
 			}
+			
+		}
+		@media (max-width: 767px) {
+		padding-right: 0;
+		text-align: center;
+		margin-top: 228px;
+		margin-bottom: 5px;
+		z-index: 5;
 		}
 	}
 	.cta-bottom{
 		position: relative;z-index:3;
 		p{position: relative;z-index:2;	}
+		@media (max-width: 767px) {
+			text-align: center;
+		}
 	}
 	.rotate-image1{
 		transform:rotate(22.63deg);
@@ -131,6 +178,10 @@
 			top: remy(-145);
 			left: remy(465);
 		}
+		@media (max-width: 767px) {
+		   top:100px;left:127px;
+		   transform:rotate(12.63deg);
+		}
 	}
 	.rotate-image2{
 		transform:rotate(-25.08deg);
@@ -141,6 +192,10 @@
 		@media (max-width: 1919px) {
 			top: remy(-250);
 			left: remy(222);
+		}
+		@media (max-width: 767px) {
+		left:34px;
+		top:-233px;
 		}
 	}
 	.siple-txt-top,
@@ -154,6 +209,10 @@
 
 		position: absolute;
 		width: 493px;
+		@media (max-width: 1919px) {
+			font-size: remy(25);
+			width: remy(493);
+		}
 	}
 	.siple-txt-top{
 		right: 83px;
@@ -162,13 +221,21 @@
 			right: remy(83);
 			top: remy(67);
 		}
+		@media (max-width: 767px) {
+		display: none;
+		}
 	}
 	.siple-txt-bottom{
 		bottom: 148px;
 		left: 393px;
+		text-indent: 30px;
 		@media (max-width: 1919px) {
 			bottom: remy(155);
 			left: remy(400);
+			text-indent: remy(30);
 		}
+		@media (max-width: 767px) {
+			display: none;
+			}
 	}
 }
